strategic-deal-assurance/force-app/main/default/objects/Strategic_Discount_Rule__mdt/Strategic_Discount_Rule__mdt.object-meta.xml
<CustomObject>
    <description>BR-STRATEGIC-DISCOUNT: version-controlled approval policy configuration.</description>
    <label>Strategic Discount Rule</label>
    <pluralLabel>Strategic Discount Rules</pluralLabel>
</CustomObject>