strategic-deal-assurance/force-app/main/default/objects/Strategic_Discount_Rule__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>BR-STRATEGIC-DISCOUNT: Active.</description>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
    <label>Active</label>
</CustomField>