strategic-deal-assurance/force-app/main/default/objects/Strategic_Discount_Rule__mdt/fields/Discount_Threshold_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Threshold_Percent__c</fullName>
    <description>BR-STRATEGIC-DISCOUNT: Discount Threshold Percent.</description>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
    <label>Discount Threshold Percent</label>
</CustomField>