strategic-deal-assurance/force-app/main/default/objects/Strategic_Discount_Rule__mdt/fields/Minimum_Amount_INR__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Amount_INR__c</fullName>
    <description>BR-STRATEGIC-DISCOUNT: strict lower amount boundary in USD. Legacy INR API identifier retained for compatibility; no currency conversion.</description>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
    <label>Minimum Amount USD</label>
</CustomField>