strategic-deal-assurance/force-app/main/default/objects/Strategic_Discount_Rule__mdt/fields/Rule_Version__c.field-meta.xml
<CustomField>
    <fullName>Rule_Version__c</fullName>
    <description>BR-STRATEGIC-DISCOUNT: Rule Version.</description>
    <length>40</length>
    <type>Text</type>
    <label>Rule Version</label>
</CustomField>